# internal/app/repository/mysql/model/category_model.go
@@ -1,0 +1,15 @@
+package model
+
+import (
+	"database/sql"
+	"time"
+)
+
+type CategoryModel struct {
+	Id          []byte
+	Name        string
+	Description string
+	ImageUrl    sql.NullString
+	CreatedAt   time.Time
+	UpdatedAt   time.Time
+}
